Add scripts for performance measurements in Node and Chrome

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "mocha",
     "cover": "nyc -- mocha -R dot",
     "lint": "eslint *.js test",
-    "docs": "jsdoc -c jsdoc.json README.md *.js"
+    "docs": "jsdoc -c jsdoc.json README.md *.js",
+    "perf": "node perf/TransformIterator-perf.js",
+    "perf-browser": "webpack perf/TransformIterator-perf.js -o perf/browser-source.js --mode development --display errors-only && node perf/browser-runner.js \"./browser-source.js\" && rm perf/browser-source.js"
   },
   "license": "MIT",
   "repository": "RubenVerborgh/AsyncIterator",
@@ -23,8 +25,11 @@
     "mocha": "^6.0.2",
     "nyc": "^13.3.0",
     "pre-commit": "^1.2.2",
+    "puppeteer": "^2.1.0",
     "sinon": "^7.2.7",
-    "sinon-chai": "^3.3.0"
+    "sinon-chai": "^3.3.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   },
   "pre-commit": [
     "lint",
