--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "cover": "nyc -- mocha -R dot",
     "lint": "eslint *.js test",
     "docs": "jsdoc -c jsdoc.json README.md *.js",
-    "perf": "node perf/TransformIterator-perf.js",
-    "perf-browser": "webpack perf/TransformIterator-perf.js -o perf/browser-source.js --mode development --display errors-only && node perf/browser-runner.js \"./browser-source.js\" && rm perf/browser-source.js"
+    "perf:transform": "node perf/TransformIterator-perf.js",
+    "perf-browser:transform": "webpack perf/TransformIterator-perf.js -o perf/browser-source.js --mode development --display errors-only && node perf/browser-runner.js \"./browser-source.js\" && rm perf/browser-source.js",
+    "perf:buffered": "node perf/BufferedIterator-perf.js",
+    "perf-browser:buffered": "webpack perf/BufferedIterator-perf.js -o perf/browser-source.js --mode development --display errors-only && node perf/browser-runner.js \"./browser-source.js\" && rm perf/browser-source.js",
+    "perf": "npm run perf:transform && npm run perf:buffered",
+    "perf-browser": "npm run perf-browser:transform && npm run perf-browser:buffered"
   },
   "license": "MIT",
   "repository": "RubenVerborgh/AsyncIterator",
